@@ -9,6 +9,10 @@ git-annex (4.20130418) UNRELEASED; urgency=low
   * sync, assistant: Sync with remotes that have annex-ignore set,
     so that git remotes on servers without git-annex installed can be used
     to keep clients' git repos in sync.
+  * Detect systems that have no user name set in GECOS, and also
+    don't have user.name set in git config, and put in a workaround
+    so that commits to the git-annex branch (and the assistant)
+    will still succeed despite git not liking the system configuration.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 18 Apr 2013 16:22:48 -0400
 
